syntax = "proto3";

option java_multiple_files = true;

package com.grpc.menu;

message Menu{
    int32 menu_id=4;

    string menu_name=1;

    string menu_url=2;

    int32 parent_id=3;
}

message MenuRequest{
    int32 id=10;

    int32 menu_id=4;

    string menu_name=1;

    string menu_url=2;

    int32 parent_id=3;

    string token=6;

    repeated Menu menu=5;
}

message MenuResponse{
    int32 id=10;

    int32 menu_id=4;

    string menu_name=1;

    string menu_url=2;

    int32 parent_id=3;

    repeated Menu menu=5;

    int32 status_id=6;
    
}

service MenuService{
    rpc listMenu(MenuRequest) returns (MenuResponse);
    rpc addMenu(MenuRequest) returns (MenuResponse);
    rpc removeMenu(MenuRequest) returns (MenuResponse);
    rpc modifyMenu(MenuRequest) returns (MenuResponse);
    rpc getRoute(MenuRequest) returns (MenuResponse);
    rpc getMenu(MenuRequest) returns (MenuResponse);
}